tests/file_test/testdata/unknown_operator.expected
tests/file_test/testdata/unknown_operator.llang: error: unsupported `^`
    1|2^4;
     | ^

